<resources>
    <string name="app_name">time2</string>
    <string name="more">编辑</string>
    <string name="watch">查看</string>
    <string name="delete" >删除</string>
    <string name="back">返回</string>
    <string name="write_note">记笔记</string>
    <string name="known">我知道了</string>
    <string name="new_event">新建日程</string>
    <string name="new_note">新建笔记</string>
    <string name="note_show">我的记录</string>
    <string name="trash_can">垃圾箱</string>
    <string name="navigation_group_1">分组1</string>
    <string name="example">例子</string>
    <string name="navigation_group_2">分组2</string>
    <string name="see_more">更多</string>
    <string name="setting">设置</string>
    <string name="item_update">自动更新</string>
    <string name="item_font">字体设置</string>
    <string name="description_update">是否开启更新，建议开启</string>
    <string name="description_default_font">默认字体</string>
    <string name="download">下载</string>
    <string name="size">文件大小： </string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="title">提示:</string>
    <string name="if_download">确认要下载吗？</string>

</resources>
